fix: change swag docs)
